<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient01"
    tools:context=".LoginActivity">

    <!--  Empezamos por la appbar  -->
    <!--creamos un scrollview para colocar el formulario-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">
        <!--colocamos icono-->
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/schedule" />
        <!--colocamos un texto-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/iconIv"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/ingresa_con_tu_email_y_contrasena"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="22sp" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="30dp"
        android:paddingHorizontal="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--campo email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="false"
                    android:background="@drawable/shape_edit_text01"
                    android:drawableStart="@drawable/ic_input_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/DarkGray"
                    app:boxBackgroundMode="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--campo contrasena-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailInput"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="false"
                    android:background="@drawable/shape_edit_text01"
                    android:drawableStart="@drawable/ic_lock_input"
                    android:drawablePadding="10dp"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/DarkGray" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--recuperar contrasena-->
            <TextView
                android:id="@+id/olvidaste_contrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordInput"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/olvide_mi_contrasena" />

            <!--boton de ingreso-->
            <Button
                android:id="@+id/login_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/olvidaste_contrasena"
                android:background="@drawable/shape_button01"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/ingresa2"
                android:textColor="@color/White"
                app:backgroundTint="@color/Secondary"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/login_Btn"
                android:padding="20dp"
                android:layout_marginTop="210dp"
                android:text="@string/desarrollado_por_unknowncode"
                android:textAlignment="center"/>


        </RelativeLayout>


    </ScrollView>



</RelativeLayout>