<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient01"
    tools:context=".LoginActivity">

    <!--  Empezamos por la appbar  -->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/shape_toolbar01">
        <!--colocamos flecha para volver a pantalla anterior-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <!--colocamos icono-->
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/schedule" />
        <!--colocamos un texto-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/iconIv"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/crea_tu_cuenta"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="22sp" />


    </RelativeLayout>

    <!--creamos un scrollview para colocar el formulario-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="30dp"
        android:paddingHorizontal="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--campo nombre-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="false"
                    android:background="@drawable/shape_edit_text01"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/DarkGray"
                    app:boxBackgroundMode="none" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--campo email-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInput"
                android:layout_below="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/loginEmailEt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="false"
                    android:background="@drawable/shape_edit_text01"
                    android:drawableStart="@drawable/ic_input_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/DarkGray"
                    app:boxBackgroundMode="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--campo contrasena-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailInput"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/loginPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="false"
                    android:background="@drawable/shape_edit_text01"
                    android:drawableStart="@drawable/ic_lock_input"
                    android:drawablePadding="10dp"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/DarkGray" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--campo contrasena-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordInput"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/repeatPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="false"
                    android:background="@drawable/shape_edit_text01"
                    android:drawableStart="@drawable/ic_lock_input"
                    android:drawablePadding="10dp"
                    android:hint="@string/repite_contrasena"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/DarkGray" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--boton de registro-->
            <Button
                android:id="@+id/register_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repeatPasswordInput"
                android:background="@drawable/shape_button01"
                android:fontFamily="@font/rubik_regular"
                android:layout_marginTop="10dp"
                android:text="@string/registrate_01"
                android:textColor="@color/White"
                app:backgroundTint="@color/Secondary" />


        </RelativeLayout>


    </ScrollView>

    <!--si no tenes cuenta...-->
    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/ya_tenes_cuenta_toca_aca"


        />


</RelativeLayout>