<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_fragmentBody"
    >

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintVertical_bias=".10"
        android:background="@drawable/shape_edit_text01"
        android:drawableStart="@drawable/ic_input_email"
        android:drawablePadding="5dp"
        android:fontFamily="@font/rubik_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_edit_text01"
        android:drawableStart="@drawable/ic_lock_input"
        android:drawablePadding="5dp"
        android:autofillHints="false"
        android:fontFamily="@font/rubik_regular"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/login_Btn"
        style="bold"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="105dp"
        android:background="@drawable/shape_button01"
        android:fontFamily="@font/rubik_regular"
        android:text="INGRESA"
        android:textSize="16sp"
        android:layout_marginBottom="25dp"
        app:backgroundTint="@color/Secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias=".83"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/fgtPass"
        android:fontFamily="@font/rubik_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidaste_tu_contrasena"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>